<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/infobg"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".85"
        app:layout_constraintHeight_percent=".40"
        android:background="@drawable/infoheader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        android:text="@string/Info"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/Purple"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="@+id/imageBackground"
        app:layout_constraintStart_toStartOf="@+id/imageBackground"
        app:layout_constraintEnd_toEndOf="@+id/imageBackground" />

    <TextView
        android:id="@+id/textNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        android:text="@string/Note"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/Purple"
        android:textAlignment="center"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textInfo"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
        app:layout_constraintStart_toStartOf="@+id/imageBackground"
        app:layout_constraintEnd_toEndOf="@+id/imageBackground" />

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/infoheader"
        app:layout_constraintWidth_percent=".85"
        app:layout_constraintHeight_percent=".45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageLogopnj"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".16"
        app:srcCompat="@drawable/logopnj"
        android:layout_marginTop="25dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textMadeby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        android:text="this app was made by:"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/Purple"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/imageLogopnj"
        app:layout_constraintBottom_toTopOf="@+id/textJihan"
        app:layout_constraintStart_toStartOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="@+id/imageHeader" />

    <TextView
        android:id="@+id/textJihan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        android:text="@string/Jihan"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/Purple"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/emailJihan"
        app:layout_constraintStart_toStartOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="@+id/imageHeader" />

    <TextView
        android:id="@+id/textWening"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        android:text="@string/Wening"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/Purple"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/emailWen"
        app:layout_constraintStart_toStartOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="@+id/imageHeader" />

    <TextView
        android:id="@+id/emailJihan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        android:text="jihshadini@gmail.com"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/Purple"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textWening"
        app:layout_constraintStart_toStartOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="@+id/imageHeader" />

    <TextView
        android:id="@+id/emailWen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".75"
        android:text="weningutaamii@gmail.com"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/Purple"
        android:textAlignment="center"
        android:layout_marginBottom="25dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        app:layout_constraintStart_toStartOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="@+id/imageHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>