<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textNoteMonitor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".90"
            android:text="@string/Realtime"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/Purple"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textKondisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:text=" Realtime condition: "
            android:textAlignment="center"
            android:textColor="@color/White"
            android:background="@color/Purple"
            app:layout_constraintTop_toBottomOf="@id/textNoteMonitor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".90" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/textKondisi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonAlkohol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonrose"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/Alkohol"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/textHasilAlokohol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/column"
            android:padding="12dp"
            android:text=" "
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/Purple"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonSuhu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonrose"
            android:padding="10dp"
            android:text="@string/Suhu"
            android:fontFamily="@font/poppins_semibold"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textHasilSuhu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/column"
            android:padding="12dp"
            android:text=" "
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/Purple"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textHasilLembab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/column"
            android:padding="12dp"
            android:text=" "
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/Purple"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

     <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".90"
        android:background="@drawable/mainbodycontrol"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNoteControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".90"
                android:text="@string/Click"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/White"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonOn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonon"
                    android:text="On"
                    android:fontFamily="@font/poppins_semibold"
                    android:textAllCaps="false"
                    android:textColor="@color/Pink"
                    android:layout_marginBottom="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="5dp" />

                <Button
                    android:id="@+id/buttonOff"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonoff"
                    android:text="Off"
                    android:fontFamily="@font/poppins_semibold"
                    android:textAllCaps="false"
                    android:textColor="@color/Purple"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="30dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>